--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "ladash": "^1.2.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "view-design": "^4.0.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -29,7 +35,13 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "indent": [
+        1,
+        4
+      ],
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
