批量打包下载

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "core-js": "^3.4.3",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.2",
     "ladash": "^1.2.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
@@ -36,11 +39,14 @@
       "eslint:recommended"
     ],
     "rules": {
-      "indent": [
-        1,
-        4
-      ],
-      "no-console": "off"
+      "indent": [ 1, 4 ],
+      "no-console": "off",
+      "vue/no-parsing-error": [
+        2,
+        {
+          "x-invalid-end-tag": false
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
