--- a/package.json
+++ b/package.json
@@ -39,14 +39,10 @@
       "eslint:recommended"
     ],
     "rules": {
-      "indent": [ 1, 4 ],
+      "no-var": "error", 
       "no-console": "off",
-      "vue/no-parsing-error": [
-        2,
-        {
-          "x-invalid-end-tag": false
-        }
-      ]
+      "no-debugger": "error", 
+      "object-shorthand": "error"
     },
     "parserOptions": {
       "parser": "babel-eslint"
