--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass-loader": "^8.0.0",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -39,10 +40,16 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-var": "error", 
+      "no-var": "error",
       "no-console": "off",
-      "no-debugger": "error", 
-      "object-shorthand": "error"
+      "no-debugger": "error",
+      "object-shorthand": "error",
+      "vue/no-parsing-error": [
+        2,
+        {
+          "x-invalid-end-tag": false
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
