--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^8.0.0",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2"
   },
