--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "file-saver": "^2.0.2",
     "jszip": "^3.2.2",
@@ -19,6 +20,7 @@
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2"
   },
