--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "jszip": "^3.2.2",
     "ladash": "^1.2.0",
     "node-sass": "^4.13.0",
+    "print-js": "^1.0.63",
     "sass-loader": "^8.0.0",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
     "vue-lottie": "^0.2.1",
+    "vue-print-nb": "^1.5.0",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2"
   },
