--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "file-saver": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.1.1",
     "jszip": "^3.2.2",
     "ladash": "^1.2.0",
     "node-sass": "^4.13.0",
