--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
+    "element-ui": "^2.9.2",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.1.1",
@@ -33,6 +34,7 @@
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-component": "^1.1.1",
     "echarts": "^4.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
