--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "echarts": "^4.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-json-excel": "^0.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
