--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "element-ui": "^2.9.2",
-    "file-saver": "^2.0.2",
+    "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.1.1",
     "jszip": "^3.2.2",
