--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
+    "dom-to-pdf": "^0.2.2",
     "element-ui": "^2.9.2",
     "file-saver": "^2.0.5",
     "html-docx-js": "^0.3.1",
