--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-json-excel": "^0.3.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
     "root": true,
